--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,35 @@
-#box-1 {
-    background-color: pink;
-    /* border-width: 3px;
-    border-color: red;
-    border-style: solid; */
-    border: 3px solid red;
-    border-radius: 10px;
+.box {
+    background: lightgray;
+    border: 2px solid black;
+    width: 500px;
+
+    /* Padding in all sides. */
+    padding: 20px;
+
+    /* Margin on allsides. */
+    margin: 20px;
+
+    /* padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px; */
+
+    /* Padding short hand! */
+    padding: 10x 20x;
+
+    /* Padding short hand! */
+    padding: 10px 20px 10px 20px;
 }
 
-#box-2 {
-    background: cyan;
-    color: white;
-    border: blue solid 3px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+.box h2 {
+    padding-bottom: 10px;
+
+
 }
 
-#box-3 {
-    background-image: url(/img/banner.gif);
-    color: white;
-    height: 200px;
-    width: 650px;
-    /* background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover; */
-    background: url('/img/banner.gif' no-repeat center center/cover);
+/* CSS Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-#box-4 {
-    background: url(/img/logo.png) no-repeat center center;
-    background-attachment: fixed;
-}
-
