--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,36 @@
-.box {
-    background: lightgray;
-    border: 2px solid black;
-    width: 500px;
-
-    /* Padding in all sides. */
-    padding: 20px;
-
-    /* Margin on allsides. */
-    margin: 20px;
-
-    /* padding-top: 10px;
-    padding-right: 20px;
-    padding-bottom: 10px;
-    padding-left: 20px; */
-
-    /* Padding short hand! */
-    padding: 10x 20x;
-
-    /* Padding short hand! */
-    padding: 10px 20px 10px 20px;
-}
-
-.box h2 {
-    padding-bottom: 10px;
-
-
-}
-
-/* CSS Reset */
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+}
+.container {
+    max-width: 960px;
+    margin: auto;
+}
+
+.clr {
+    clear: both;
+}
+.body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.4em;
+}
+
+.box {
+    background: lightblue;
+    border: 1px solid black;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.box p {
+    text-align: center;
+}
+
+#box2 {
+    float: left;
+    width: 69%;
+}
+
+#box3 {
+    float: right;
+    width: 30%;
 }
