--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,39 @@
     box-sizing: border-box;
 }
 
+.navbar {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background: blue;
+}
+.side-menu {
+    list-style-type: none;
+    border: 1px solid grey;
+    border-radius: 10px;
+    width: 300px;
+    padding: 20px;
+}
+
+.side-menu li {
+    font-size: 18px;
+    line-height: 2.4em;
+    border-bottom: dotted 1px #ddd;
+}
+
+.side-menu li:last-child {
+    border: none;
+}
+
+.side-menu a {
+    color : black;
+    text-decoration: none;
+}
+
+.side-menu li a:hover {
+    color: coral;
+}
+
 a {
     color: pink;
     text-decoration: none;
