--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,22 @@
-* {
-    box-sizing: border-box;
-}
-
-.navbar {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    background: blue;
-}
-.side-menu {
-    list-style-type: none;
-    border: 1px solid grey;
+.nav-bar {
+    display: left;
+    background: cyan;
+    width: 100%;
     border-radius: 10px;
-    width: 300px;
-    padding: 20px;
+
+
 }
 
-.side-menu li {
-    font-size: 18px;
-    line-height: 2.4em;
-    border-bottom: dotted 1px #ddd;
+.nav-bar li {
+    display: inline-block;
+    padding: 10px;
+    margin: 10px;
 }
 
-.side-menu li:last-child {
-    border: none;
-}
-
-.side-menu a {
-    color : black;
+.nav-bar li a {
     text-decoration: none;
 }
 
-.side-menu li a:hover {
-    color: coral;
-}
-
-a {
-    color: pink;
-    text-decoration: none;
-}
-
-a:hover {
-    color: blue;
-    text-decoration: underline;
-}
-
-a:active {
-    color: red;
-}
-
-.btn {
-    background: #4c6ca0;
-    color: white;
-    border: none;
-    font-size: 16px;
-    padding: 10 20;
-    border-radius: 5px; 
-    cursor: pointer;
-}
-
-.btn:hover {
-    background: brown;
-}
-
-.container {
-    max-width: 960px;
-    margin: auto;
-}
-
-.clr {
-    clear: both;
-}
-.body {
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.4em;
-}
-
-.box {
-    background: lightblue;
-    border: 1px solid black;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.box p {
-    text-align: center;
-}
-
-#box2 {
-    float: left;
-    width: 69%;
-}
-
-#box3 {
-    float: right;
-    width: 30%;
+.nav-bar li a:hover {
+    border: black solid;
 }
