--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,48 @@
-.nav-bar {
-    display: left;
+body {
+    height: 4000px;
+}
+
+#box-1 {
+    background: coral;
+    position: relative;
+    top: 50px;
+    left: 50px;
+    z-index: 1;
+}
+
+.container {
+    width: 500px;
+    height: 500px;
+    position: relative;
     background: cyan;
-    width: 100%;
-    border-radius: 10px;
-
-
 }
 
-.nav-bar li {
-    display: inline-block;
-    padding: 10px;
-    margin: 10px;
+#box-2 {
+    position: absolute;
+    background: pink;
+    top: 100px;
+    left: 100px;
 }
 
-.nav-bar li a {
-    text-decoration: none;
+#box-3 {
+    background: green;
+    position: absolute;
+    background: pink;
+    bottom: 100px;
+    right: 100px;
 }
 
-.nav-bar li a:hover {
-    border: black solid;
+#box-4 {
+    position: fixed;
+    background: blue;
 }
+
+#box-5 {
+    position: sticky;
+    background: orange;
+    top: 0;
+    z-index: -1;
+}
+
+
+
